--- a/contact.html
+++ b/contact.html
@@ -4,28 +4,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../ResponsiveBlogTemplate/css/utils.css">
-    <link rel="stylesheet" href="../ResponsiveBlogTemplate/css/style.css">
-    <link rel="stylesheet" href="../ResponsiveBlogTemplate/css/blogpost.css">
-    <link rel="stylesheet" href="../ResponsiveBlogTemplate/css/mobile.css">
-    <link rel="stylesheet" href="../ResponsiveBlogTemplate/css/contact.css">
+    <link rel="stylesheet" href="../css/utils.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/blogpost.css">
+    <link rel="stylesheet" href="../css/mobile.css">
+    <link rel="stylesheet" href="../css/contact.css">
     <title>Blog - template</title>
 </head>
 
 <body>
     <nav class="navigation max-width-1 m-auto">
         <div class="nav-left">
-            <a href="/">
-                <span><img src="../ResponsiveBlogTemplate/img/logo.png" width="94px" alt=""></span>
+            <a href="#">
+                <span><img src="../img/logo.png" width="94px" alt=""></span>
             </a>
             <ul>
-                <li><a href="/">Home</a></li>
+                <li><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
-                <li><a href="../ResponsiveBlogTemplate/contact.html">Contact</a></li>
+                <li><a href="../contact.html">Contact</a></li>
             </ul>
         </div>
         <div class="nav-right">
-            <form action="../ResponsiveBlogTemplate/search.html" method="get">
+            <form action="../search.html" method="get">
                 <input class="form-input" type="text" name="query" placeholder="Article Search">
                 <button class="btn">Search</button>
             </form>
