--- a/search.html
+++ b/search.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../ResponsiveBlogTemplate/css/utils.css">
-    <link rel="stylesheet" href="../ResponsiveBlogTemplate/css/style.css">
-    <link rel="stylesheet" href="../ResponsiveBlogTemplate/css/blogpost.css">
-    <link rel="stylesheet" href="../ResponsiveBlogTemplate/css/mobile.css">
-    <link rel="stylesheet" href="../ResponsiveBlogTemplate/css/contact.css">
+    <link rel="stylesheet" href="../css/utils.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/blogpost.css">
+    <link rel="stylesheet" href="../css/mobile.css">
+    <link rel="stylesheet" href="../css/contact.css">
     <title>Blog - template</title>
 </head>
 
@@ -16,16 +16,16 @@
     <nav class="navigation max-width-1 m-auto">
         <div class="nav-left">
             <a href="#">
-                <span><img src="../ResponsiveBlogTemplate/img/logo.png" width="94px" alt=""></span>
+                <span><img src="../img/logo.png" width="94px" alt=""></span>
             </a>
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
-                <li><a href="../ResponsiveBlogTemplate/contact.html">Contact</a></li>
+                <li><a href="../contact.html">Contact</a></li>
             </ul>
         </div>
         <div class="nav-right">
-            <form action="../ResponsiveBlogTemplate/search.html" method="get">
+            <form action="../search.html" method="get">
                 <input class="form-input" type="text" name="query" placeholder="Article Search">
                 <button class="btn">Search</button>
             </form>
@@ -54,10 +54,10 @@
         </div>
         <div class="home-article">
             <div class="home-article-img">
-                <img src="../ResponsiveBlogTemplate/img/11.svg" alt="article">
+                <img src="../img/11.svg" alt="article">
             </div>
             <div class="home-article-content font1">
-                <a href="../ResponsiveBlogTemplate/blogpost.html">
+                <a href="../blogpost.html">
                     <h3>Lorem ipsum dolor sit amet consectetur adipisicing.</h3>
                 </a>
 
@@ -67,10 +67,10 @@
         </div>
         <div class="home-article">
             <div class="home-article-img">
-                <img src="../ResponsiveBlogTemplate/img/11.svg" alt="article">
+                <img src="../img/11.svg" alt="article">
             </div>
             <div class="home-article-content font1">
-                <a href="../ResponsiveBlogTemplate/blogpost.html">
+                <a href="../blogpost.html">
                     <h3>Lorem ipsum dolor sit amet consectetur adipisicing.</h3>
                 </a>
 
@@ -80,10 +80,10 @@
         </div>
         <div class="home-article">
             <div class="home-article-img">
-                <img src="../ResponsiveBlogTemplate/img/11.svg" alt="article">
+                <img src="../img/11.svg" alt="article">
             </div>
             <div class="home-article-content font1">
-                <a href="../ResponsiveBlogTemplate/blogpost.html">
+                <a href="../blogpost.html">
                     <h3>Lorem ipsum dolor sit amet consectetur adipisicing.</h3>
                 </a>
 
@@ -93,10 +93,10 @@
         </div>
         <div class="home-article">
             <div class="home-article-img">
-                <img src="../ResponsiveBlogTemplate/img/home.svg" alt="article">
+                <img src="../img/home.svg" alt="article">
             </div>
             <div class="home-article-content font1">
-                <a href="../ResponsiveBlogTemplate/blogpost.html">
+                <a href="../blogpost.html">
                     <h3>Lorem ipsum dolor sit amet consectetur adipisicing.</h3>
                 </a>
 
@@ -106,10 +106,10 @@
         </div>
         <div class="home-article">
             <div class="home-article-img">
-                <img src="../ResponsiveBlogTemplate/img/11.svg" alt="article">
+                <img src="../img/11.svg" alt="article">
             </div>
             <div class="home-article-content font1">
-                <a href="../ResponsiveBlogTemplate/blogpost.html">
+                <a href="../blogpost.html">
                     <h3>Lorem ipsum dolor sit amet consectetur adipisicing.</h3>
                 </a>
 
@@ -119,10 +119,10 @@
         </div>
         <div class="home-article">
             <div class="home-article-img">
-                <img src="../ResponsiveBlogTemplate/img/11.svg" alt="article">
+                <img src="../img/11.svg" alt="article">
             </div>
             <div class="home-article-content font1">
-                <a href="../ResponsiveBlogTemplate/blogpost.html">
+                <a href="../blogpost.html">
                     <h3>Lorem ipsum dolor sit amet consectetur adipisicing.</h3>
                 </a>
 
@@ -132,10 +132,10 @@
         </div>
         <div class="home-article">
             <div class="home-article-img">
-                <img src="../ResponsiveBlogTemplate/img/11.svg" alt="article">
+                <img src="../img/11.svg" alt="article">
             </div>
             <div class="home-article-content font1">
-                <a href="../ResponsiveBlogTemplate/blogpost.html">
+                <a href="../blogpost.html">
                     <h3>Lorem ipsum dolor sit amet consectetur adipisicing.</h3>
                 </a>
 
@@ -145,10 +145,10 @@
         </div>
         <div class="home-article">
             <div class="home-article-img">
-                <img src="../ResponsiveBlogTemplate/img/11.svg" alt="article">
+                <img src="../img/11.svg" alt="article">
             </div>
             <div class="home-article-content font1">
-                <a href="../ResponsiveBlogTemplate/blogpost.html">
+                <a href="../blogpost.html">
                     <h3>Lorem ipsum dolor sit amet consectetur adipisicing.</h3>
                 </a>
 
