--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
     <nav class="navigation max-width-1 m-auto">
         <div class="nav-left">
             <a href="#">
-                <span><img src="/img/logo.png" width="94px" alt=""></span>
+                <span><img src="img/logo.png" width="94px" alt=""></span>
             </a>
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
-                <li><a href="../contact.html">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </div>
         <div class="nav-right">
-            <form action="../search.html" method="get">
+            <form action="search.html" method="get">
                 <input class="form-input" type="text" name="query" placeholder="Article Search">
                 <button class="btn">Search</button>
             </form>
@@ -48,7 +48,7 @@
                 happening this year?</p>
         </div>
         <div class="content-right">
-            <img src="../img/home.svg" alt="iBlog">
+            <img src="img/home.svg" alt="iBlog">
         </div>
     </div>
 
@@ -70,10 +70,10 @@
         </div>
         <div class="home-article">
             <div class="home-article-img">
-                <img src="../img/3.png" alt="article">
+                <img src="img/3.png" alt="article">
             </div>
             <div class="home-article-content font1">
-                <a href="../blogpost.html">
+                <a href="blogpost.html">
                     <h3>Lorem ipsum dolor sit amet consectetur adipisicing.</h3>
                 </a>
 
@@ -83,10 +83,10 @@
         </div>
         <div class="home-article">
             <div class="home-article-img">
-                <img src="../img/1.png" alt="article">
+                <img src="img/1.png" alt="article">
             </div>
             <div class="home-article-content font1">
-                <a href="../blogpost.html">
+                <a href="blogpost.html">
                     <h3>Lorem ipsum dolor sit amet consectetur adipisicing.</h3>
                 </a>
 
@@ -96,10 +96,10 @@
         </div>
         <div class="home-article">
             <div class="home-article-img">
-                <img src="../img/2.png" alt="article">
+                <img src="img/2.png" alt="article">
             </div>
             <div class="home-article-content font1">
-                <a href="../blogpost.html">
+                <a href="blogpost.html">
                     <h3>Lorem ipsum dolor sit amet consectetur adipisicing.</h3>
                 </a>
 
@@ -109,10 +109,10 @@
         </div>
         <div class="home-article">
             <div class="home-article-img">
-                <img src="../img/1.png" alt="article">
+                <img src="img/1.png" alt="article">
             </div>
             <div class="home-article-content font1">
-                <a href="../blogpost.html">
+                <a href="blogpost.html">
                     <h3>Lorem ipsum dolor sit amet consectetur adipisicing.</h3>
                 </a>
 
@@ -122,10 +122,10 @@
         </div>
         <div class="home-article">
             <div class="home-article-img">
-                <img src="../img/11.svg" alt="article">
+                <img src="img/11.svg" alt="article">
             </div>
             <div class="home-article-content font1">
-                <a href="../blogpost.html">
+                <a href="blogpost.html">
                     <h3>Lorem ipsum dolor sit amet consectetur adipisicing.</h3>
                 </a>
 
@@ -135,10 +135,10 @@
         </div>
         <div class="home-article">
             <div class="home-article-img">
-                <img src="../img/3.png" alt="article">
+                <img src="img/3.png" alt="article">
             </div>
             <div class="home-article-content font1">
-                <a href="../blogpost.html">
+                <a href="blogpost.html">
                     <h3>Lorem ipsum dolor sit amet consectetur adipisicing.</h3>
                 </a>
 
@@ -148,10 +148,10 @@
         </div>
         <div class="home-article">
             <div class="home-article-img">
-                <img src="../img/2.png" alt="article">
+                <img src="img/2.png" alt="article">
             </div>
             <div class="home-article-content font1">
-                <a href="../blogpost.html">
+                <a href="blogpost.html">
                     <h3>Lorem ipsum dolor sit amet consectetur adipisicing.</h3>
                 </a>
 
@@ -161,10 +161,10 @@
         </div>
         <div class="home-article">
             <div class="home-article-img">
-                <img src="../img/11.svg" alt="article">
+                <img src="img/11.svg" alt="article">
             </div>
             <div class="home-article-content font1">
-                <a href="../blogpost.html">
+                <a href="blogpost.html">
                     <h3>Lorem ipsum dolor sit amet consectetur adipisicing.</h3>
                 </a>
 
