--- a/contact.html
+++ b/contact.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/utils.css">
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/blogpost.css">
-    <link rel="stylesheet" href="../css/mobile.css">
-    <link rel="stylesheet" href="../css/contact.css">
+    <link rel="stylesheet" href="css/utils.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/blogpost.css">
+    <link rel="stylesheet" href="css/mobile.css">
+    <link rel="stylesheet" href="css/contact.css">
     <title>Blog - template</title>
 </head>
 
@@ -16,16 +16,16 @@
     <nav class="navigation max-width-1 m-auto">
         <div class="nav-left">
             <a href="#">
-                <span><img src="../img/logo.png" width="94px" alt=""></span>
+                <span><img src="img/logo.png" width="94px" alt=""></span>
             </a>
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
-                <li><a href="../contact.html">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </div>
         <div class="nav-right">
-            <form action="../search.html" method="get">
+            <form action="search.html" method="get">
                 <input class="form-input" type="text" name="query" placeholder="Article Search">
                 <button class="btn">Search</button>
             </form>
