--- a/index.html
+++ b/index.html
@@ -176,8 +176,8 @@
     </div>
 
     <div class="footer">
-        <p>Copyright &copy; iBlog.com </p>
-        <a href="https://www.vecteezy.com/free-vector/typewriter">Vector Credits: Vecteezy</a>
+        <p>Copyright &copy; Avi.com </p>
+      
     </div>
 </body>
 
